@@ -43,18 +43,9 @@ function proxy_deep_stack_error_nested
 
 function test_proper_error_by_stack
 
-    files = { ...
-        'E:\repositories\mlunit\test\test_assert\test_assert_error.m'; ...
-        'E:\repositories\mlunit\test\test_assert\test_assert_error.m'; ...
-        'E:\repositories\mlunit\src\assertions\assert_error.m'; ...
-        'E:\repositories\mlunit\test\test_assert\test_assert_error.m'; ...
-        'E:\repositories\mlunit\src\@function_test_case\run_test.m'; ...
-        'E:\repositories\mlunit\src\@test_case\run.m'; ...
-        'E:\repositories\mlunit\src\@test_suite\run.m'; ...
-        'E:\repositories\mlunit\src\automation\recursive_test_run.m'; ...
-        'E:\repositories\mlunit\src\automation\recursive_test_run.m'; ...
-    };
 
+    % only include function names, as they should be pretty stable across
+    % different machines and different revisions
     names = { ...
         'proxy_deep_stack_error_nested'; ...
         'proxy_deep_stack_error'; ...
@@ -67,19 +58,7 @@ function test_proper_error_by_stack
         'recursive_test_run'; ...
     };
 
-    lines = { ...
-        42; ...
-        38; ...
-        62; ...
-        84; ...
-        21; ...
-        42; ...
-        24; ...
-        84; ...
-        41; ...
-    };
-
-    expected_stack = struct('file', files, 'name', names, 'line', lines);
+    expected_stack = struct('name', names);
 
     assert_error(@proxy_deep_stack_error, struct('stack', expected_stack));
 
